@@ -2,5 +2,7 @@
 To run the project
 
 `$mvn clean`
-
 `$mvn javafx:run`
+
+To test the project, put this into the VM options
+`-ea -ea -ea -ea --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED`
